--- a/config/squid.conf
+++ b/config/squid.conf
@@ -42,8 +42,8 @@ http_access allow localhost
 # INSERT YOUR OWN RULE(S) HERE TO ALLOW ACCESS FROM YOUR CLIENTS
 #
 
-#url_rewrite_program /usr/local/bin/squidGuard -c /etc/squidguard/squidguard.conf -C all -b
-#url_rewrite_children 10 startup=4 idle=2 concurrency=0
+url_rewrite_program /usr/local/bin/squidGuard -c /etc/squidguard/squidguard.conf -C all -b
+url_rewrite_children 10 startup=4 idle=2 concurrency=0
 
 
 # And finally deny all other access to this proxy
