--- a/config/squid.conf
+++ b/config/squid.conf
@@ -19,11 +19,6 @@ acl CONNECT method CONNECT
 acl blacklist dstdomain .facebook.com
 acl blacklist dstdomain .youporn.com
 
-acl step1 at_step SslBump1
-acl step2 at_step SslBump2
-acl step3 at_step SslBump3
-acl nobumpSites ssl::server_name "/etc/squid/nobumpSites.txt"
-
 http_access deny all blacklist
 http_access deny !Safe_ports
 
@@ -42,18 +37,19 @@ http_access allow localhost
 # INSERT YOUR OWN RULE(S) HERE TO ALLOW ACCESS FROM YOUR CLIENTS
 #
 
-url_rewrite_program /usr/local/bin/squidGuard -c /etc/squidguard/squidguard.conf -C all -b
-url_rewrite_children 10 startup=4 idle=2 concurrency=0
+# Uncomment here to enable squidGuard
+#url_rewrite_program /usr/local/bin/squidGuard -c /etc/squidguard/squidguard.conf -C all -b
+#url_rewrite_children 10 startup=4 idle=2 concurrency=0
 
 
 # And finally deny all other access to this proxy
 http_access deny all
 
 # Squid normally listens to port 3128
-http_port 3128 generate-host-certificates=on dynamic_cert_mem_cache_size=6MB cert=/etc/squid/ssl/proxyCA.pem
+http_port 3128 
 
 # Configure DNS resolvers
-dns_nameservers 8.8.8.8 8.8.4.4
+dns_nameservers 1.1.1.1 1.0.0.1
 
 # Send client IP to the server
 forwarded_for on
