--- a/config/squid_ssl.conf
+++ b/config/squid_ssl.conf
@@ -42,22 +42,15 @@ http_access allow localhost
 # INSERT YOUR OWN RULE(S) HERE TO ALLOW ACCESS FROM YOUR CLIENTS
 #
 
-#url_rewrite_program /usr/local/bin/squidGuard -c /etc/squidguard/squidguard.conf -C all -b
-#url_rewrite_children 10 startup=4 idle=2 concurrency=0
+url_rewrite_program /usr/local/bin/squidGuard -c /etc/squidguard/squidguard.conf -C all -b
+url_rewrite_children 10 startup=4 idle=2 concurrency=0
 
 
 # And finally deny all other access to this proxy
 http_access deny all
 
 # Squid normally listens to port 3128
-http_port 3128 ssl-bump generate-host-certificates=on dynamic_cert_mem_cache_size=6MB cert=/etc/squid/ssl/proxyCA.pem
-
-# Peek & splice options
-ssl_bump peek step1 all
-ssl_bump peek step2 nobumpSites
-ssl_bump splice step3 nobumpSites 
-ssl_bump stare step2
-ssl_bump bump step3
+http_port 3128 generate-host-certificates=on dynamic_cert_mem_cache_size=6MB cert=/etc/squid/ssl/proxyCA.pem
 
 # Configure DNS resolvers
 dns_nameservers 8.8.8.8 8.8.4.4
